Fix issue where typeParameter was not used in return value of ExprOf<T>; and fix issue where parameter info and inlay was showing first parameter of extension methods and member macro methods (#1227)